--- a/app/src/main/res/layout/activity_consulta_carrera.xml
+++ b/app/src/main/res/layout/activity_consulta_carrera.xml
@@ -9,20 +9,20 @@
 
     <TextView
         android:id="@+id/textViewModificandoNombreCarrera"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="37dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="2dp"
         android:gravity="center"
         android:text="Modificando x carrera"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerViewConsultaCarrera"
         android:name="com.example.proyectotfg.ModificarResultados"
-        android:layout_width="411dp"
-        android:layout_height="772dp"
+        android:layout_width="0dp"
+        android:layout_height="780dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
@@ -32,7 +32,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_marginEnd="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
