--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -7,4 +7,70 @@
     android:layout_height="match_parent"
     tools:context=".Creditos">
 
+    <TextView
+        android:id="@+id/textViewCreditos"
+        android:layout_width="149dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="44dp"
+        android:gravity="center"
+        android:text="CREDITOS"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewCreadopor"
+        android:layout_width="279dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="152dp"
+        android:gravity="center"
+        android:text="APP creada por Hugo Serrano"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCreditos" />
+
+    <TextView
+        android:id="@+id/textViewCIPF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:text="Proyecto TFG realizado para el CIPF Juan de Herrrera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCreadopor" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:layout_marginBottom="34dp"
+        android:text=" Enlace al Github : https://github.com/HugoSerranoH/ProyectoTFG"
+        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCIPF"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/textViewVersion"
+        android:layout_width="255dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="64dp"
+        android:text="Versión 0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
+        android:textStyle="bold"/>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
