--- a/app/src/main/res/layout/activity_creditos.xml
+++ b/app/src/main/res/layout/activity_creditos.xml
@@ -9,11 +9,12 @@
 
     <TextView
         android:id="@+id/textViewCreditos"
-        android:layout_width="149dp"
-        android:layout_height="57dp"
+        android:layout_width="281dp"
+        android:layout_height="55dp"
         android:layout_marginTop="44dp"
         android:gravity="center"
-        android:text="CREDITOS"
+        android:text="CRÉDITOS"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -22,15 +23,15 @@
 
     <TextView
         android:id="@+id/textViewCreadopor"
-        android:layout_width="279dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="152dp"
+        android:layout_width="372dp"
+        android:layout_height="111dp"
+        android:layout_marginTop="84dp"
         android:gravity="center"
-        android:text="APP creada por Hugo Serrano"
+        android:text="APP creada por Hugo Serrano Hernández"
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCreditos" />
 
@@ -44,33 +45,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCreadopor" />
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
-        android:layout_marginBottom="34dp"
-        android:text=" Enlace al Github : https://github.com/HugoSerranoH/ProyectoTFG"
-        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCIPF"
-        android:gravity="center"/>
 
     <TextView
         android:id="@+id/textViewVersion"
         android:layout_width="255dp"
         android:layout_height="30dp"
         android:layout_marginBottom="64dp"
+        android:gravity="center"
         android:text="Versión 0.1"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewgithubicon"
+        android:layout_width="131dp"
+        android:layout_height="112dp"
+        android:layout_marginTop="194dp"
+        android:layout_marginBottom="107dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewCIPF"
+        app:srcCompat="@drawable/githubicon" />
 
-
+    <ImageView
+        android:id="@+id/imageViewlinkedinicon"
+        android:layout_width="125dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="195dp"
+        android:layout_marginBottom="104dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.863"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCIPF"
+        app:srcCompat="@drawable/linkedinicon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
