--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -12,13 +12,13 @@
         android:id="@+id/textView15"
         android:layout_width="318dp"
         android:layout_height="38dp"
-        android:layout_marginStart="44dp"
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:text="Bienvenido,rellena los siguientes campos"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textStyle="bold"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView13"
