--- a/app/src/main/res/layout/fragment_lista_participantes.xml
+++ b/app/src/main/res/layout/fragment_lista_participantes.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ListaParticipantes">
 
-
-
-    <ListView
-        android:id="@+id/listViewParticipantes"
-        android:layout_width="match_parent"
-        android:layout_height="854dp"
-        android:layout_marginTop="45dp" />
 
     <EditText
         android:id="@+id/editTextTextBuscaCarrera"
@@ -21,4 +16,11 @@
         android:inputType="text"
         android:hint="Busca participante" />
 
-</FrameLayout>
+
+    <ListView
+        android:id="@+id/listViewParticipantes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scrollbars="vertical" />
+</LinearLayout>
