--- a/app/src/main/res/layout/fragment_lista_usuarios.xml
+++ b/app/src/main/res/layout/fragment_lista_usuarios.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaUsuarios">
-
-
-
-    <ListView
-        android:id="@+id/listViewCarreras"
-        android:layout_width="match_parent"
-        android:layout_height="854dp"
-        android:layout_marginTop="45dp" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".ListaUsuarios">>
 
     <EditText
         android:id="@+id/editTextTextBuscaCarrera"
@@ -21,4 +14,10 @@
         android:inputType="text"
         android:hint="Busca usuario" />
 
-</FrameLayout>
+    <ListView
+        android:id="@+id/listViewCarreras"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scrollbars="vertical" />
+</LinearLayout>
