--- a/app/src/main/res/layout/fragment_modificar_deportista.xml
+++ b/app/src/main/res/layout/fragment_modificar_deportista.xml
@@ -6,15 +6,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BorrarDeportista">
+    tools:context=".ModificarDeportista">
 
     <TextView
-        android:id="@+id/textViewBorrarDeportista"
+        android:id="@+id/textViewModificarDeportista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:gravity="center"
-        android:text="Borrar Deportista"
+        android:text="Modificar Deportista"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,14 +26,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
-        android:text="Eliminar Deportista"
+        android:text="Modificar Deportista"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerViewBorrarUsuarios"
+        android:id="@+id/fragmentContainerViewModificarUsuarios"
         android:name="com.example.proyectotfg.ListaUsuarios"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -42,7 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewBorrarDeportista"
+        app:layout_constraintTop_toBottomOf="@+id/textViewModificarDeportista"
         app:layout_constraintVertical_bias="0.242" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
