--- a/app/src/main/res/layout/fragment_anadir_participante.xml
+++ b/app/src/main/res/layout/fragment_anadir_participante.xml
@@ -21,55 +21,43 @@
         android:id="@+id/fragmentContainerViewTodosUsuarios"
         android:name="com.example.proyectotfg.ListaUsuarios"
         android:layout_width="0dp"
-        android:layout_height="306dp"
-        android:layout_marginTop="3dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonanadirparticipante"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewArribaParticipantes"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewArribaParticipantes" />
 
     <Button
         android:id="@+id/buttonanadirparticipante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="325dp"
+        android:backgroundTint="@color/green"
         android:text="Añadir"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewTodosUsuarios"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewArribaParticipantes" />
 
     <Button
         android:id="@+id/buttonborrarparticipante"
-        android:layout_width="97dp"
-        android:layout_height="0dp"
+        android:layout_width="95dp"
+        android:layout_height="49dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginBottom="28dp"
         android:backgroundTint="@color/red"
         android:text="Borrar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewParticipantesanadidos"
-        android:layout_marginBottom="2dp"/>
-
-    <Button
-        android:id="@+id/buttonfinalizar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="16dp"
-        android:text="Finalizar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerViewParticipantesanadidos"
-        android:layout_marginBottom="2dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewParticipantesanadidos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_width="411dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
         android:text="Participantes añadidos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonanadirparticipante" />
 
@@ -77,11 +65,8 @@
         android:id="@+id/fragmentContainerViewParticipantesanadidos"
         android:name="com.example.proyectotfg.ListaParticipantes"
         android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="22dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonborrarparticipante"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
