--- a/app/src/main/res/layout/fragment_crear_deportista.xml
+++ b/app/src/main/res/layout/fragment_crear_deportista.xml
@@ -111,11 +111,11 @@
         android:id="@+id/buttonGuardarDeportista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
         android:layout_marginTop="22dp"
+        android:backgroundTint="@color/green"
         android:text="Guardar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerGeneroDeportista"
-        android:backgroundTint="@color/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinnerGeneroDeportista" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
