Puqueñas mejoras en la interfaz y ya permite filtrar por Participantes y añadido el numero de dorsal.

--- a/app/src/main/res/layout/fragment_borrar_carrera.xml
+++ b/app/src/main/res/layout/fragment_borrar_carrera.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/spinnerSeleccionCarrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/red"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
