--- a/app/src/main/res/layout/fragment_crear_carrera.xml
+++ b/app/src/main/res/layout/fragment_crear_carrera.xml
@@ -74,7 +74,8 @@
         android:text="Guardar Carrera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextLocalidad" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextLocalidad"
+        android:backgroundTint="@color/green"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
