--- a/app/src/main/res/layout/fragment_modificar_deportista.xml
+++ b/app/src/main/res/layout/fragment_modificar_deportista.xml
@@ -30,7 +30,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/orange"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerViewModificarUsuarios"
