--- a/app/src/main/res/layout/activity_elige_modo.xml
+++ b/app/src/main/res/layout/activity_elige_modo.xml
@@ -5,14 +5,15 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EligeModo">
+    tools:context=".EligeModo"
+    android:background="@color/light_light_blue">
 
 
     <TextView
         android:id="@+id/textViewDeporte_usuario"
-        android:layout_width="385dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="418dp"
+        android:layout_height="83dp"
+        android:background="@color/light_light_blue"
         android:gravity="center"
         android:text="Elige el deporte , nombre_usuario "
         android:textSize="20sp"
@@ -25,7 +26,7 @@
         android:id="@+id/spinner2"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:background="@color/light_light_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDeporte_usuario" />
@@ -41,36 +42,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
-
- <!--   <ImageButton
-        android:id="@+id/imageButtonCiclismo"
-        android:layout_width="85dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageButtonAtletismo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
-        tools:srcCompat="@drawable/bicycle_icon" />
-
-    <ImageButton
-        android:id="@+id/imageButtonAtletismo"
-        android:layout_width="84dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="16dp"
-        android:scaleType="centerInside"
+    <ImageView
+        android:id="@+id/imageViewconstruccion"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
-        tools:srcCompat="@drawable/sprint_icon" />
-    <ImageButton
-        android:id="@+id/imageButtonKarts"
-        android:layout_width="89dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButtonAtletismo"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
-        tools:srcCompat="@drawable/forklift_icon" /> -->
+        app:layout_constraintTop_toTopOf="@+id/fragmentAccion"
+        app:srcCompat="@drawable/enconstruccionlogo"
+        android:visibility="invisible"/>
+
+
+    <!--   <ImageButton
+           android:id="@+id/imageButtonCiclismo"
+           android:layout_width="85dp"
+           android:layout_height="63dp"
+           android:layout_marginStart="36dp"
+           android:layout_marginTop="16dp"
+           app:layout_constraintEnd_toStartOf="@+id/imageButtonAtletismo"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/spinner2"
+           tools:srcCompat="@drawable/bicycle_icon" />
+
+       <ImageButton
+           android:id="@+id/imageButtonAtletismo"
+           android:layout_width="84dp"
+           android:layout_height="68dp"
+           android:layout_marginTop="16dp"
+           android:scaleType="centerInside"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/spinner2"
+           tools:srcCompat="@drawable/sprint_icon" />
+       <ImageButton
+           android:id="@+id/imageButtonKarts"
+           android:layout_width="89dp"
+           android:layout_height="66dp"
+           android:layout_marginTop="16dp"
+           android:layout_marginEnd="40dp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toEndOf="@+id/imageButtonAtletismo"
+           app:layout_constraintTop_toBottomOf="@+id/spinner2"
+           tools:srcCompat="@drawable/forklift_icon" /> -->
 </androidx.constraintlayout.widget.ConstraintLayout>
