--- a/app/src/main/res/layout/fragment_crear_carrera.xml
+++ b/app/src/main/res/layout/fragment_crear_carrera.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="41dp"
-        android:text="Nombre_Carrera"
+        android:text="Nombre Carrera"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCreacionCarrera" />
 
