--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="indigo">#3F51B5</color>
     <color name="blue">#2196F3</color>
     <color name="light_blue">#03A9F4</color>
+    <color name="light_light_blue">#6AC0E2</color>
     <color name="cyan">#00BCD4</color>
     <color name="teal">#009688</color>
     <color name="green">#4CAF50</color>
