--- a/app/src/main/res/layout/fragment_modificar_resultados.xml
+++ b/app/src/main/res/layout/fragment_modificar_resultados.xml
@@ -60,4 +60,16 @@
         android:text="Actualizar Resultados"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/buttonBorrarResultados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="4dp"
+        android:layout_gravity="bottom|left"
+        android:text="Borrar resultados"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/light_red"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
