--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_red">#711009</color>
     <color name="red">#F44336</color>
     <color name="light_red">#F65D50</color>
     <color name="pink">#E91E63</color>
@@ -13,6 +14,7 @@
     <color name="light_light_blue">#6AC0E2</color>
     <color name="cyan">#00BCD4</color>
     <color name="teal">#009688</color>
+    <color name="dark_green">#266D26</color>
     <color name="green">#4CAF50</color>
     <color name="light_green">#8BC34A</color>
     <color name="lime">#CDDC39</color>
