--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,24 @@
     </style>
 
     <style name="Theme.ProyectoTFG" parent="Base.Theme.ProyectoTFG" />
+
+    <style name="BotonesRojos" parent="Widget.Material3.Button">
+    <item name="android:background">@drawable/botonesrojos</item>
+    <item name= "backgroundTint"> @null</item>
+    <item name= "backgroundTintMode"> @null</item>
+        </style>
+
+
+    <style name="BotonesVerdes" parent="Widget.Material3.Button">
+        <item name="android:background">@drawable/botonesverdes</item>
+        <item name= "backgroundTint"> @null</item>
+        <item name= "backgroundTintMode"> @null</item>
+    </style>
+
+    <style name="BotonesMarrones" parent="Widget.Material3.Button">
+        <item name="android:background">@drawable/botonesmarrones</item>
+        <item name= "backgroundTint"> @null</item>
+        <item name= "backgroundTintMode"> @null</item>
+    </style>
+
 </resources>
