--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="amber">#FFC107</color>
     <color name="orange">#FF9800</color>
     <color name="deep_orange">#FF5722</color>
+    <color name="dark_brown">#593D35</color>
     <color name="brown">#795548</color>
     <color name="light_brown">#83635B</color>
     <color name="grey">#9E9E9E</color>
