--- a/app/src/main/res/layout/fragment_modificar_resultados.xml
+++ b/app/src/main/res/layout/fragment_modificar_resultados.xml
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="@color/orange"
         android:text="Actualizar Resultados"
@@ -65,11 +65,11 @@
         android:id="@+id/buttonBorrarResultados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="4dp"
         android:layout_gravity="bottom|left"
+        android:layout_marginStart="6dp"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="@color/light_red"
         android:text="Borrar resultados"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/light_red"/>
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
