--- a/app/src/main/res/layout/fragment_ver_resultados.xml
+++ b/app/src/main/res/layout/fragment_ver_resultados.xml
@@ -98,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:layout_marginBottom="4dp"
+        android:layout_marginStart="6dp"
         android:backgroundTint="@color/grey"
         android:text="Volver a Carreras"
         app:layout_constraintBottom_toBottomOf="parent"
