--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -70,7 +70,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="104dp"
         android:backgroundTint="@color/green"
         android:text="Iniciar Sesión"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,8 +80,8 @@
 
     <TextView
         android:id="@+id/textViewRegistrate"
-        android:layout_width="263dp"
-        android:layout_height="17dp"
+        android:layout_width="265dp"
+        android:layout_height="25dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="Registrate aquí"
@@ -91,8 +91,8 @@
 
     <TextView
         android:id="@+id/textViewCreditos"
-        android:layout_width="184dp"
-        android:layout_height="0dp"
+        android:layout_width="187dp"
+        android:layout_height="26dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="Información de la app"
@@ -105,10 +105,12 @@
         android:id="@+id/imageView"
         android:layout_width="267dp"
         android:layout_height="181dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ContraseñaeditTextText2"
         app:srcCompat="@drawable/logotfg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
