--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -16,28 +16,28 @@
             android:text="Posición" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewVerNombre"
             android:layout_width="81dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Nombre" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewVerEquipo"
             android:layout_width="58dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Equipo" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textViewVerDorsal"
             android:layout_width="46dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Dorsal" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textViewVerTiempo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
