--- a/app/src/main/res/layout/fragment_modificar_resultados.xml
+++ b/app/src/main/res/layout/fragment_modificar_resultados.xml
@@ -23,14 +23,14 @@
             android:text="Posición" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewVerNombre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Nombre" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textViewVerTiempo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
