--- a/app/src/main/res/layout/fragment_ver_resultados.xml
+++ b/app/src/main/res/layout/fragment_ver_resultados.xml
@@ -16,34 +16,35 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/textViewVerPosicion"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:baselineAligned="false"
             android:text="Posición" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewVerNombre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text=" Nombre" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textViewVerEquipo"
             android:layout_width="58dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Equipo" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textViewVerDorsal"
             android:layout_width="15dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Dorsal" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textViewVerTiempo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
